--- a/index.html
+++ b/index.html
@@ -16,35 +16,48 @@ Date: 11/2/2019 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <!--FontAwesome CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- SVG icons from Font Awesome: http://fontawesome.com/ -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
 
-    <!-- My CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Recipe website</title>
+    <!-- Our custom CSS -- Bootstrap overrides to customize colors and background -->
+    <!-- heather's note: changing filename from style.css to custom.css to
+         adhere to standards re: adding your own custom css on top of bootstrap,
+         see: https://uxplanet.org/how-to-customize-bootstrap-b8078a011203 -->
+    <link rel="stylesheet" type="text/css" href="custom.css">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Ramaraja|Solway:400,700|Supermercado+One&display=swap" rel="stylesheet">
+
+    <title>snacc.io | make food happen.</title>
 </head>
 
 <body id="main">
-    <!-- #region Navbar from bootstrap -->
-    <nav class="zone navbar-header sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Recipe Site</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
-            <button type="button" class="btn btn-secondary m-2" data-toggle="modal" data-target="#exampleModal">
-                Contact Us
-            </button>
-        </div>
-    </nav>
-    <!-- #endregion -->
+  <!-- #region Navbar from bootstrap -->
+  <!-- navbar-dark bg-dark -->
+  <nav class="zone navbar-header sticky-top navbar-expand-lg navbar-dark bg-dark d-flex">
+    <div id="logo"><i class="fas fa-lemon"></i></div>
+    <div class="title">
+      <a class="navbar-brand" href="#">snacc.io</a>
+      <span class="tagline">make food happen.</span>
+    </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+          </ul>
+          <button type="button" class="btn btn-secondary m-2" data-toggle="modal" data-target="#exampleModal">
+              Contact Us
+          </button>
+      </div>
+  </nav>
+  <!-- #endregion -->
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -100,13 +113,90 @@ Date: 11/2/2019 -->
     </div>
 
     <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Recipe Website</h1>
-            <p class="lead">This website is a searchable repository for simple, cheap, fast recipes for college students.
-            </p>
-        </div>
-    </div>
+    <div class="jumbotron jumbotron-fluid d-flex">
+      <div class="jumbotron-contents">
+
+        <!-- Filters -->
+        <div class="filters-container">
+          <div class="filter-input-container">
+            <label for="filter-time">
+              <div class="filter-header">
+                <img class="filter-img" src="images/cooking-time.png" alt="cooking time">
+                <span class="filter-label">Cook Time</span>
+              </div>
+            </label>
+            <div class="filter-input-element">
+              <select id="filter-time" class="filter-input" name="filter-time">
+                <option selected value="">Any</option>
+                <option>< 10 min.</option>
+                <option>10 - 30 min.</option>
+                <option>30 - 60 min.</option>
+                <option>60 - 120 min.</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="filter-input-container">
+            <label for="filter-budget">
+              <div class="filter-header">
+                <img class="filter-img" src="images/budget.png" alt="budget">
+                <span class="filter-label">Budget</span>
+              </div>
+            </label>
+            <div class="filter-input-element">
+              <select id="filter-time" class="filter-input" name="filter-time">
+                <option selected value="">Any</option>
+                <option>Broke</option>
+                <option>Thrifty</option>
+                <option>Average</option>
+                <option>Spendy</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="filter-input-container">
+            <fieldset id="filter-appliance" class="filter-fieldset">
+              <label for="filter-appliance">
+                <div class="filter-header">
+                  <img class="filter-img" src="images/stove.png" alt="stove">
+                  <span class="filter-label">Appliances</span>
+                </div>
+              </label>
+
+              <div class="checkbox-item">
+                <input type="checkbox" name="filter-microwave" id="filter-appliance-microwave" value="microwave">
+                <label for="filter-appliance-microwave">Microwave</label>
+              </div>
+
+              <div class="checkbox-item">
+                <input type="checkbox" name="filter-stove" id="filter-appliance-stove" value="stove">
+                <label for="filter-appliance-stove">Stove</label>
+              </div>
+
+              <div class="checkbox-item">
+                <input type="checkbox" name="filter-oven" id="filter-appliance-oven" value="oven">
+                <label for="filter-appliance-oven">Oven</label>
+              </div>
+
+              <div class="checkbox-item">
+                <input type="checkbox" name="filter-appliance" id="filter-appliance-other" value="other">
+                <label for="filter-appliance-other">Other</label>
+              </div>
+            </fieldset>
+          </div>
+
+          <button id="filter-update-button" class="action-button">Search</button>
+        </div><!-- End of Filters -->
+        <div class="vertical-bar"></div>
+        <div class="pitch-container">
+          <p class="lead-1"><span class="accent">...hungry, <i>again.</i></span> (Didn't this just happen a few hours ago?)</p>
+          <p class="lead-2"><span class="accent-2">snacc.io curates recipes for students & other busy people</span> Quickly search by cook time, estimated budet, and even available appliances. We've got the recipes, the rest is up to you.</p>
+          <hr class="lil-break">
+          <div class="whats-cooking">so, what's cooking?</div>
+        </div><!-- end of pitch-container -->
+
+      </div><!-- end of jumbotron contents -->
+    </div><!--end of jumbotron -->
 
 
 
@@ -312,7 +402,7 @@ Date: 11/2/2019 -->
                 </div>
             </div>
 
-            
+
             <!--end project region-->
         </div>
         <!-- /.row -->
@@ -351,6 +441,7 @@ Date: 11/2/2019 -->
             <div class="footer-copyright text-center py-3">© 2019 Copyright:
             </div>
             <!-- Copyright -->
+            <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </div>
 
     </footer>
